--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
                         </div>
                       -->
 
-                        <img class="iphoneScreen hidden" src="assets/screenshot/screenshots.png" alt="">
+                        <img class="iphoneScreen" src="assets/screenshot/screenshots.png" alt="">
 
                         <!-- {% include screencontent.html %} -->
 
