--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,10 @@
             <div class="headerBackground">
                 <div class="container">
                     {% include header.html %}
+                    <img class="myScreenshot" src="assets/screenshot/screenshots.png" alt="">
+                <!--
                     <div class="iphonePreview">
 
-                        <!--
 
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 0 0" style="position: absolute;">
                             <clipPath id="screenMask" clipPathUnits="objectBoundingBox" transform="scale(0.00257, 0.00119)">
@@ -22,13 +23,12 @@
                             <video class="screenvideo" autoplay="autoplay" controls="controls">
                             </video>
                         </div>
-                      -->
 
-                        <!-- <img class="iphoneScreen" src="assets/screenshot/screenshots.png" alt=""> -->
+                        <img class="iphoneScreen" src="assets/screenshot/screenshots.png" alt="">
 
-                        <!-- {% include screencontent.html %} -->
-
+                        {% include screencontent.html %}
                     </div>
+                -->
                     <div class="appInfo">
                         <div class="appIconShadow">
                             <svg width="0" height="0">
