--- a/_includes/features.html
+++ b/_includes/features.html
@@ -5,10 +5,12 @@
     {% if feature.title %}
     <div class="feature">
         <div>
+
             <span class="fa-stack fa-1x">
                 <i class="iconBack fas fa-circle fa-stack-2x"></i>
-                <i class="iconTop fas fa-{{ feature.fontawesome_icon_name }} fa-stack-1x"></i>
+                <i class="fa fa-{{ feature.fontawesome_icon_name }} fa-stack-1x fa-inverse"></i>
             </span>
+            <i class="fa-solid fa-weight-scale"></i>
         </div>
         <div class="featureText">
             <h3>
