--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
                             <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
+                            <a href="https://www.producthunt.com/posts/cryo-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-cryo&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=351539&theme=light" alt="Cryo - Discover&#0032;the&#0032;power&#0032;of&#0032;cold&#0032;showers | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
                         </div>
                     </div>
                     {% include features.html %}
