--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,6 +48,12 @@
 				</span>
 			</a>
 		{% endif %}
+		<a href="https://reddit.com/r/cryoapp">
+			<span class="fa-stack fa-1x">
+				<i class="socialIconBack fas fa-circle fa-stack-2x"></i>
+				<i class="socialIconTop fab fa-reddit-alien fa-stack-1x"></i>
+			</span>
+		</a>
 
 	</div>
 	<div class="footerLinks">
@@ -57,5 +63,6 @@
 		{% if site.presskit_download_link %}
 			<a href="{{ site.presskit_download_link }}">Press Kit</a>
 		{% endif %}
+		<a href="https://www.healthline.com/health/cold-shower-benefits">More on cold shower benefits</a>
 	</div>
 </footer>
