--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,6 +63,6 @@
 		{% if site.presskit_download_link %}
 			<a href="{{ site.presskit_download_link }}">Press Kit</a>
 		{% endif %}
-		<a href="https://www.healthline.com/health/cold-shower-benefits">Learn More About Cold Showers</a>
+		<a href="https://foreffect.ai/auto-blur">Blur Faces in Your Video For Free</a>
 	</div>
 </footer>
